<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login_tip"
        android:textSize="36sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_register_tip"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_login"
        android:layout_below="@+id/tv_login_tip"
        android:paddingLeft="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_left"
        android:hint="@string/login_tip"
        android:inputType="number"
        android:background="@drawable/background_input"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="45dp" />


    
    <ImageButton
        android:id="@+id/btn_go"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_login"
        android:background="@drawable/background_circle"
        android:src="@mipmap/icon_next"
        android:layout_width="42dp"
        android:layout_height="42dp" />

</RelativeLayout>