<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/common_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/try_use_top_color"
            app:srlAccentColor="@android:color/white"
            app:srlEnablePreviewInEditMode="true"
            app:srlPrimaryColor="@color/try_use_top_color" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/common_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_child_bg" />

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/try_use_top_color"
            app:srlAccentColor="@android:color/white"
            app:srlPrimaryColor="@color/try_use_top_color" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <com.mingle.widget.LoadingView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/ll_refresh_noData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_noData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ico_nodata" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_noData"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_padding"
            android:text="@string/no_data_attention"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_net_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_no_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ico_recycler_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_no_net"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_padding"
            android:text="@string/no_net_error"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_refresh_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ico_recycler_reload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_error"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_padding"
            android:text="@string/load_error"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_normal" />
    </RelativeLayout>
</LinearLayout>