<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <!--分享-->
        <RelativeLayout
            android:id="@+id/rl_share_gift"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_try_use_detail_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/share_get_scroll"
                android:textColor="@color/try_use_top_color" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/five_padding"
                android:layout_toLeftOf="@+id/tv_try_use_detail_share"
                android:src="@mipmap/ico_share_gift" />
        </RelativeLayout>

        <!--申请-->
        <TextView
            android:id="@+id/tv_try_sue_detail_get"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/try_use_now_bg"
            android:gravity="center"
            android:text="@string/try_use_now"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <com.youth.banner.Banner
                android:id="@+id/report_detail_banner"
                image_scale_type="center_crop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:banner_default_image="@mipmap/icon_default_banner" />
            <!--报告名称-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fivteen_padding">

                <ImageView
                    android:id="@+id/iv_product_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ico_report_like" />

                <TextView
                    android:id="@+id/tv_use_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_product_like"
                    android:textColor="@color/colorSmallBlack"
                    android:textSize="@dimen/report_detail_title_size"
                    android:textStyle="bold"
                    tools:text="这是标题" />
                <!--收藏-->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/fivteen_padding"
                android:paddingLeft="@dimen/fivteen_padding"
                android:paddingRight="@dimen/fivteen_padding"
                android:paddingTop="@dimen/five_padding">
                <!--一个商品的容量-->
                <LinearLayout
                    android:id="@+id/ll_size_and_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_thing_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="left|top"
                        android:layout_marginRight="@dimen/five_padding"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="@dimen/font_normal"
                        android:autoSizeMinTextSize="@dimen/font_small"
                        android:autoSizeTextType="uniform"
                        android:gravity="left"
                        android:paddingBottom="@dimen/five_padding"
                        android:paddingTop="@dimen/five_padding"
                        android:textColor="@color/report_detail_name_bg"
                        tools:text="测试标题测试标题测试标题测试标题测试标题测试标题测试标题测试标题测试标题" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_thing_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right|top"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="@dimen/font_normal"
                        android:autoSizeMinTextSize="@dimen/font_small"
                        android:autoSizeTextType="uniform"
                        android:gravity="right"
                        android:paddingBottom="@dimen/five_padding"
                        android:paddingTop="@dimen/five_padding"
                        android:textColor="@color/report_detail_name_bg"
                        tools:text="单价:300" />
                </LinearLayout>

                <cn.iwgang.countdownview.CountdownView
                    android:id="@+id/count_down_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/five_padding"
                    android:layout_below="@+id/ll_size_and_price"
                    android:paddingBottom="@dimen/five_padding"
                    android:paddingTop="@dimen/five_padding"
                    app:isHideTimeBackground="true"
                    app:isShowDay="true"
                    app:isShowHour="true"
                    app:isShowMillisecond="false"
                    app:isShowMinute="true"
                    app:isShowSecond="true"
                    app:isTimeTextBold="true"
                    app:suffixDay="天"
                    app:suffixGravity="center"
                    app:suffixHour="时"
                    app:suffixMinute="分"
                    app:suffixSecond="秒"
                    app:suffixTextColor="#707070"
                    app:suffixTextSize="14sp"
                    app:timeTextColor="@color/try_use_top_color"
                    app:timeTextSize="14sp" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignRight="@+id/count_down_time"
                    android:layout_below="@+id/ll_size_and_price"
                    android:layout_marginTop="@dimen/five_padding"
                    android:layout_centerVertical="true"
                    android:paddingBottom="@dimen/five_padding"
                    android:paddingTop="@dimen/five_padding"
                    android:gravity="center_vertical"
                    android:textColor="@color/report_detail_name_bg"
                    android:textSize="@dimen/font_normal"
                    tools:text="数量:10" />
            </RelativeLayout>

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#CBCBCB" />
            <!--申请人数-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/fivteen_padding"
                android:paddingLeft="@dimen/fivteen_padding"
                android:paddingRight="@dimen/fivteen_padding"
                android:paddingTop="@dimen/five_padding">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@color/try_use_top_color"
                    android:visibility="gone" />
                <!--申请人数-->
                <TextView
                    android:id="@+id/tv_person_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/five_padding"
                    android:paddingTop="@dimen/five_padding"
                    android:textColor="@color/report_detail_name_bg"
                    android:textSize="@dimen/font_normal"
                    tools:text="共120人申请" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dots_height"
                android:background="@color/common_divider_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_one_padding"
                android:paddingBottom="@dimen/fivteen_padding"
                android:paddingLeft="@dimen/fivteen_padding"
                android:paddingRight="@dimen/fivteen_padding"
                android:paddingTop="@dimen/five_padding">

                <TextView
                    android:id="@+id/tv_simple_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/produce_introduce"
                    android:textColor="@color/colorSmallBlack"
                    android:textSize="@dimen/report_detail_title_size" />

                <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
                    android:id="@+id/super_player"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/tv_simple_title"
                    android:layout_marginTop="@dimen/ten_padding"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_webview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_simple_title"
                    android:layout_marginTop="@dimen/ten_padding"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/web_progress_bar"
                        style="@style/style_progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.zfsoft.zfsoft_product.widget.X5WebView
                        android:id="@+id/webview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_nointroduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_simple_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/ten_padding"
                    android:paddingBottom="@dimen/five_padding"
                    android:paddingTop="@dimen/five_padding"
                    android:text="暂无简介"
                    android:textSize="@dimen/font_normal"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>